// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceForm /> should render 1`] = `
<Fragment>
  <InputGroup>
    <Input__InputLabel>
      Name
    </Input__InputLabel>
    <Input
      error="baz"
      name="name"
      onChange={[MockFunction]}
      value="Foo"
    />
    <Input__InputError>
      baz
    </Input__InputError>
  </InputGroup>
  <InputGroup>
    <Input__InputLabel>
      Description
    </Input__InputLabel>
    <TextArea
      name="description"
      onChange={[MockFunction]}
      value="Foo reference"
    />
  </InputGroup>
</Fragment>
`;

exports[`<ReferenceForm /> should render error when provided in props 1`] = `
<Fragment>
  <InputGroup>
    <Input__InputLabel>
      Name
    </Input__InputLabel>
    <Input
      error="Name required"
      name="name"
      onChange={[MockFunction]}
      value="Foo"
    />
    <Input__InputError>
      Name required
    </Input__InputError>
  </InputGroup>
  <InputGroup>
    <Input__InputLabel>
      Description
    </Input__InputLabel>
    <TextArea
      name="description"
      onChange={[MockFunction]}
      value="Foo reference"
    />
  </InputGroup>
</Fragment>
`;

exports[`<ReferenceForm /> should render organism field when [mode=create] 1`] = `
<Fragment>
  <InputGroup>
    <Input__InputLabel>
      Name
    </Input__InputLabel>
    <Input
      error="baz"
      name="name"
      onChange={[MockFunction]}
      value="Foo"
    />
    <Input__InputError>
      baz
    </Input__InputError>
  </InputGroup>
  <InputGroup>
    <Input__InputLabel>
      Organism
    </Input__InputLabel>
    <Input
      name="organism"
      onChange={[MockFunction]}
      value="Bar"
    />
  </InputGroup>
  <InputGroup>
    <Input__InputLabel>
      Description
    </Input__InputLabel>
    <TextArea
      name="description"
      onChange={[MockFunction]}
      value="Foo reference"
    />
  </InputGroup>
</Fragment>
`;
